--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 jobs:
   calling_callee:
-    uses: ./.github/workflows/callee
+    uses: ./.github/workflows/callee.yml
     with:
       versions: "this is version string"
     secrets:
