--- a/.github/workflows/share-results-in-workflow.yml
+++ b/.github/workflows/share-results-in-workflow.yml
@@ -11,10 +11,12 @@ jobs:
         name: Save Date to Job Output
         shell: bash
         run:  |
-          echo "current_date=123456" >> $GITHUB_OUTPUT
+          echo "current_date=123456" >> "$GITHUB_OUTPUT"
 #          echo "current_date=`date +'%Y-%m-%d'`" >> $GITHUB_OUTPUT
 #       - name: Save Date to State
 #         run:  echo "current_date=${date + '%Y-%m-%d'}" >> $GITHUB_STATE
+      - name: Echo from the same job
+        run: echo ${{ steps.date_job.outputs.current_date }}
   echo_date_to_console:
     runs-on: ubuntu-latest
     needs: save_date_to_job_output
