--- a/.github/workflows/share-results-in-workflow.yml
+++ b/.github/workflows/share-results-in-workflow.yml
@@ -23,6 +23,6 @@ jobs:
     steps:
       - name: Echo Job Date to Console
         env:
-          current_date: ${{ needs.save_date_to_job_ouput.outputs.date_job }}
+          current_date: ${{ needs.save_date_to_job_ouput.outputs.current_date }}
         run:  echo "$current_date"
         
