--- a/.github/workflows/share-results-in-workflow.yml
+++ b/.github/workflows/share-results-in-workflow.yml
@@ -5,7 +5,8 @@ jobs:
   save_date_to_job_output:
     runs-on: ubuntu-latest
     outputs:
-      current_date: ${{ steps.date_job.outputs.current_date }}
+#      current_date: ${{ steps.date_job.outputs.current_date }}
+      current_date: "abcd"
     steps:
       - id:   date_job
         name: Save Date to Job Output
