--- a/.github/workflows/share-results-in-workflow.yml
+++ b/.github/workflows/share-results-in-workflow.yml
@@ -2,11 +2,11 @@ name: Save Shell Output to Env
 on:
   workflow_dispatch:
 jobs:
-  save_date_to_job_output:
+  output_job:
     runs-on: ubuntu-latest
     outputs:
 #      current_date: ${{ steps.date_job.outputs.current_date }}
-      output: "abcd"
+      output: ${{ steps.date_job.outputs.current_date }}
     steps:
       - id:   date_job
         name: Save Date to Job Output
@@ -20,10 +20,8 @@ jobs:
         run: echo ${{ steps.date_job.outputs.current_date }}
   echo_date_to_console:
     runs-on: ubuntu-latest
-    needs: save_date_to_job_output
+    needs: output_job
     steps:
       - name: Echo Job Date to Console
-        env:
-          current_date: ${{needs.save_date_to_job_ouput.outputs.output}}
-        run:  printenv
+        run:  echo "current date ${{needs.output_job.outputs.output}}"
         
