--- a/.github/workflows/share-results-in-workflow.yml
+++ b/.github/workflows/share-results-in-workflow.yml
@@ -2,26 +2,28 @@ name: Save Shell Output to Env
 on:
   workflow_dispatch:
 jobs:
-  output_job:
+  setup:
     runs-on: ubuntu-latest
+    # setup job's output variable and the values
     outputs:
-#      current_date: ${{ steps.date_job.outputs.current_date }}
-      output: ${{ steps.date_job.outputs.current_date }}
+      current_date: ${{ steps.get_date.outputs.result }}
     steps:
-      - id:   date_job
-        name: Save Date to Job Output
+      # step "id" for identifying where to get the output
+      - id:   get_date
+        name: Get Date and Save Result to Step Output
+        # "shell" is optional if it is not bash dependent
         shell: bash
+        # new syntax for setting step output using shell
+        # pipe "|" is for use with multiple shell commands
         run:  |
-          echo "current_date=123456" >> "$GITHUB_OUTPUT"
-#          echo "current_date=`date +'%Y-%m-%d'`" >> $GITHUB_OUTPUT
-#       - name: Save Date to State
-#         run:  echo "current_date=${date + '%Y-%m-%d'}" >> $GITHUB_STATE
-      - name: Echo from the same job
-        run: echo ${{ steps.date_job.outputs.current_date }}
-  echo_date_to_console:
+          echo "result=`date +'%Y-%m-%d'`" >> "$GITHUB_OUTPUT"
+      - name: Echo Result within the Same Job
+        run: echo ${{ steps.get_date.outputs.result }}
+  show_result:
     runs-on: ubuntu-latest
-    needs: output_job
+    # wait until "setup" is completed
+    needs: setup
     steps:
-      - name: Echo Job Date to Console
-        run:  echo "current date ${{needs.output_job.outputs.output}}"
+      - name: Echo Result from Previous Job
+        run:  echo "current date: ${{ needs.setup.outputs.current_date }}"
         
