--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -5,7 +5,7 @@ jobs:
   calling_callee:
 #     uses: ./.github/workflows/callee.yml
     uses: ./.github/workflows/build-push-docker.yml
-    with:
-      versions: "this is version string"
-    secrets:
-      docker_username: "this is docker username"
+#     with:
+#       versions: "this is version string"
+#     secrets:
+#       docker_username: "this is docker username"
