--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -1,6 +1,11 @@
 name: Build and Push to Docker Hub
 on:
   workflow_call:
+    secrets:
+      username:
+        required: true
+      password:
+        required: true
     inputs:
       docker_org:
         type: string
@@ -50,8 +55,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.username }}
+        password: ${{ secrets.password }}
     - name: Build and Push
       uses: docker/build-push-action@v4
       with:
