--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -5,6 +5,9 @@ jobs:
   calling_callee:
 #     uses: ./.github/workflows/callee.yml
     uses: ./.github/workflows/build-push-docker.yml
+    secrets:
+      username: "${{ secrets.DOCKER_USERNAME }}"
+      password: "${{ secrets.DOCKER_PASSWORD }}"
 #     with:
 #       versions: "this is version string"
 #     secrets:
