--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -45,7 +45,7 @@ jobs:
         tags: |
           type=semver,pattern={{version}},value=1.2.3
           type=semver,pattern={{major}}.{{minor}},value=1.2.3
-          type=semver,pattern={{version}}-{{ $inputs.build-date }},value=1.2.3
+          type=semver,pattern={{version}}-${{ inputs.build-date }},value=1.2.3
     - name: printenv
       run:  printenv
     - name: Set up QEMU
