--- a/.github/workflows/tag-trigger.yml
+++ b/.github/workflows/tag-trigger.yml
@@ -14,6 +14,8 @@ jobs:
         run: echo $GITHUB_REF
       - name: print head ref
         run: echo $GITHUB_HEAD_REF
+      - name: checkout code
+        uses: actions/checkout@v3
       - name: get the branch name
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
