--- a/.github/workflows/tag-trigger.yml
+++ b/.github/workflows/tag-trigger.yml
@@ -20,5 +20,6 @@ jobs:
         run: |
           ls -l
           echo ${{github.event.base_ref}}
+          git log
           raw=$(git branch -r --contains ${{ github.ref }})
           env
