--- a/.github/workflows/tag-trigger.yml
+++ b/.github/workflows/tag-trigger.yml
@@ -1,4 +1,15 @@
 name: Tag Trigger
+# when this is triggered:
+# github.ref - will contains the tag string "refs/tags/<tag string>"
+# github.sha - is the commit sha referenced by this tag
+# if use checkout@v3, it will automatically use this commit to checkout
+# meaning it will contains all the code up to that commit.
+# therefore, the name  of the branch does not matter. in fact,
+# it is logically wrong to get the name of the branch for the tag
+# it is because the branch is just a pointer to a commit, and
+# it can be deleted at any time. In particular, a merge commit with
+# two parents commits (from two branches) is belong to two branches
+# if both of them still exist at that moment of query
 on:
   push:
     tags:
