--- a/.github/workflows/get-latest-tag.yml
+++ b/.github/workflows/get-latest-tag.yml
@@ -17,8 +17,8 @@ jobs:
       # commit path
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+        # with:
+        #   fetch-depth: 0
       #          ref: main
       - name: Get Latest Tag
         run: |
