--- a/.github/workflows/base-image-update-rebuild.yml
+++ b/.github/workflows/base-image-update-rebuild.yml
@@ -13,7 +13,7 @@ jobs:
       # check whether the base image has been updated
       - name: Check for Base Image Update
         id: "check-image"
-        run: echo "result=false" >> "$GITHUB_OUTPUT"
+        run: echo "result=true" >> "$GITHUB_OUTPUT"
 
       # checkout the code from "main" branch with all history
       # so that we can find the latest tag (if the base image
