--- a/.github/workflows/base-image-update-rebuild.yml
+++ b/.github/workflows/base-image-update-rebuild.yml
@@ -23,7 +23,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: main
+          #   ref: main
+          ref: 8cab4bc3acac795cfe78bd0c1432f45bc360747f
 
       # Get the latest tag from the "main" branch
       # if the base image has been updated
