--- a/.github/workflows/test-get-latest-tag.yml
+++ b/.github/workflows/test-get-latest-tag.yml
@@ -5,11 +5,12 @@ on:
       ref:
         type: string
         description: "Branch/Commit ID"
+        default: main
 jobs:
   test-get-latest-tag:
     uses: frederickcwong/.github/.github/workflows/get-latest-tag.yml@main
     with:
-      ref: "main"
+      ref: ${{inputs.ref}}
   echo-result:
     runs-on: ubuntu-latest
     needs: [test-get-latest-tag]
