--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -13,17 +13,21 @@ jobs:
   get-params:
     runs-on: ubuntu-latest
     outputs:
-      tag: ${{steps.get-push-param.outputs.tag}}
       sha: ${{github.sha}}
+      tag: ${{steps.get-params.outputs.tag}}
+      is-semver: ${{steps.get-params.outputs.is-semver}}
     steps:
-      - id: get-push-param
+      - id: get-params
         name: Get Push Tag Params
         run: |
           tag=$(echo ${github.ref} | awk -F/ '{print $3}')
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
+          is-semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
+          echo "is-semver=${is-semver}" >> "$GITHUB_OUTPUT"
 
   build:
     needs: [get-params]
+    if: false
     uses: frederickcwong/.github/.github/workflows/docker-build-push.yml@main
     secrets:
       username: ${{ secrets.DOCKER_USERNAME }}
