--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -13,13 +13,14 @@ jobs:
   get-params:
     runs-on: ubuntu-latest
     outputs:
-      sha: ${{github.sha}}
+      sha: ${{steps.get-params.outputs.sha}}
       tag: ${{steps.get-params.outputs.tag}}
       is-semver: ${{steps.get-params.outputs.is-semver}}
     steps:
       - id: get-params
         name: Get Push Tag Params
         run: |
+          echo "sha=${github.sha}" >> "$GITHUB_OUTPUT"
           tag=$(echo ${github.ref} | awk -F/ '{print $3}')
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
           is-semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
