--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -20,8 +20,8 @@ jobs:
       - id: get-params
         name: Get Push Tag Params
         run: |
-          echo "sha=${github.sha}" >> "$GITHUB_OUTPUT"
-          tag=$(echo ${github.ref} | awk -F/ '{print $3}')
+          echo "sha=${{github.sha}}" >> "$GITHUB_OUTPUT"
+          tag=$(echo ${{github.ref}} | awk -F/ '{print $3}')
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
           is-semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is-semver}" >> "$GITHUB_OUTPUT"
