--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -21,9 +21,9 @@ jobs:
         name: Get Push Tag Params
         run: |
           echo "sha=${{github.sha}}" >> "$GITHUB_OUTPUT"
-          tag=$(echo ${{github.ref}} | awk -F/ '{print $3}')
+          tag=$(echo "${{github.ref}}" | awk -F/ '{print $3}')
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
-          is-semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
+          semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is-semver}" >> "$GITHUB_OUTPUT"
 
   build:
