--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -23,8 +23,8 @@ jobs:
           echo "sha=${{github.sha}}" >> "$GITHUB_OUTPUT"
           tag=$(echo "${{github.ref}}" | awk -F/ '{print $3}')
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
-          semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
-          echo "is-semver=${is-semver}" >> "$GITHUB_OUTPUT"
+          is_semver=$([[ $tag =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
+          echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
 
   build:
     needs: [get-params]
