--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -2,6 +2,7 @@
 
 # if d.d.d, build full semver (multi-tag image)
 # otherwise, build special name (single tag image)
+
 name: Push Trigger to Build Image
 on:
   push:
@@ -27,6 +28,10 @@ jobs:
     steps:
       - id: get-params
         name: Get Push Tag Params
+        # see important note @ get-params job
+        # no conditional handling needed because github.sha and github.ref
+        # are required values in every action. I just needed to ignore them
+        # if the event is not a push
         run: |
           echo "sha=${{github.sha}}" >> "$GITHUB_OUTPUT"
           tag=$(echo "${{github.ref}}" | awk -F/ '{print $3}')
@@ -40,6 +45,21 @@ jobs:
     with:
       ref: ${{inputs.ref}}
 
+  # IMPORTANT NOTE
+  #
+  # there is an issue with the "needs" logic
+  # "needs" is a logical AND operation, meaning it needs all jobs listed
+  # if any of them failed or skipped, this job will not run.
+  # ideally, we want "get-dispatch-params" runs only when it is a dispatch
+  # event, etc. (this can be done by adding "if" condition in their jobs above)
+  # however, adding "if" condition to the jobs will "skip" the jobs causing this
+  # "get-params" job skipped.
+  # There is another solution to this limitation as described in the link below
+  # but it sounds like more tests/work/complications.
+  # https://stackoverflow.com/questions/66343052/github-actions-or-operator-for-needs-clause
+  # Hence my short-term solution is to let all of them runs, and use conditional statements
+  # inside each job to determine the job's outputs (default random values vs
+  # actual values).
   get-params:
     runs-on: ubuntu-latest
     needs: [get-push-params, get-dispatch-params]
