--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -130,6 +130,11 @@ jobs:
             echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
             echo "latest=${latest}" >> "$GITHUB_OUTPUT"
 
+            echo "in tag ${tag}"
+            echo "in sha ${sha}"
+            echo "in is-semver ${is_semver}"
+            echo "in latest ${latest}"
+
           # schedule
           #
           # its purpose is to update the base image periodically and it is intended for the "latest" release
